Added get user balance route and its tests.
